# telegram-bot

./: CMakeLists.txt  README.md  TESTING_SCENARIOS.md
fake/: fake.cpp  fake.h  fake_data.cpp  fake_data.h  fake_main.cpp
hello-http/: CMakeLists.txt  README.md  test.cpp  weather.cpp  weather.h
hello-http/fake/: fake_data.cpp  fake_data.h  fake_server.h  moscow.json  spb.json
telegram/: client.cpp  client.h  main.cpp
test/: test_api.cpp
